--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "combineLatest"
   ],
   "peerDependencies": {
-    "rx": "*"
+    "rxjs": "^5.0.0-beta.0"
   },
   "author": "Andre Staltz",
   "license": "MIT"
